@@ -16,8 +16,8 @@ Benet 1
 14,0.000000,0.640000
 22,-0.000000,0.420000
 0.770000,0,0.000000,0.000000,0.000000,0,0.000000,10.000000
-0.003900,0.990000,0.000000,1,7056.000000,0.420000
-0,0,91.000000,0.000000,1.530000,69.000000,0.290000
+0.003900,1.000000,0.000000,1,7056.000000,0.420000
+0,0,91.000000,8.000000,1.530000,69.000000,0.290000
 Church 1
 ---
 3,0.008500,0.990000
@@ -71,8 +71,8 @@ Church 2
 9,0.000000,0.510000
 7,-0.000000,0.360000
 0.700000,0,20.000000,0.800000,27.500000,1,6.280000,10.000000
-0.000100,0.990000,0.000000,1,10584.000000,0.250000
-0,1,95.000000,0.091700,1.270000,63.000000,0.780000
+0.000100,1.000000,0.000000,1,10584.000000,0.250000
+0,1,95.000000,6.000000,1.270000,63.000000,0.780000
 JS 2
 ---
 8,0.008760,0.660000
@@ -185,27 +185,27 @@ Hol 4
 1,1,99.000000,8.000000,1.850000,99.000000,0.900000
 Benet 5
 ---
-3,0.000000,0.000000
-5,0.000000,0.000000
-8,0.000000,0.000000
-11,0.000000,0.000000
-14,0.000000,0.000000
-22,0.000000,0.000000
-0.700000,0,0.000000,0.000000,0.000000,0,0.000000,0.000000
-0.020000,0.990000,0.000000,0,0.000000,0.000000
-0,0,0.000000,0.000000,0.000000,0.000000,0.300000
-
+8,0.003760,0.990000
+5,-0.001880,0.370000
+8,0.001253,0.970000
+16,-0.000940,0.840000
+19,0.000752,0.870000
+22,-0.000627,0.780000
+1.000000,0,10.000000,0.000000,29.100000,1,12.230000,10.000000
+0.000000,1.000000,37.599998,1,24696.000000,0.350000
+1,1,99.000000,8.000000,2.890000,99.000000,0.600000
+Ohhorgan
 ---
-3,0.000000,0.000000
-5,0.000000,0.000000
-8,0.000000,0.000000
-11,0.000000,0.000000
-14,0.000000,0.000000
-22,0.000000,0.000000
-0.700000,0,0.000000,0.000000,0.000000,0,0.000000,0.000000
-0.020000,0.990000,0.000000,0,0.000000,0.000000
-0,0,0.000000,0.000000,0.000000,0.000000,0.300000
-
+1,0.000000,0.640000
+3,-0.000000,0.990000
+5,0.000000,0.660000
+16,-0.000000,0.990000
+8,0.000000,0.010000
+4,-0.000000,0.280000
+0.700000,12,14.000000,0.800000,23.900000,1,7.900000,10.000000
+0.000100,1.000000,0.000000,1,21168.000000,0.300000
+0,1,95.000000,8.000000,1.270000,46.000000,0.860000
+JS 5
 ---
 5,0.016280,0.980000
 1,-0.008140,0.990000
